--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/postgresql-42.2.8.jar"/>
+	<classpathentry kind="lib" path="lib/charm-glisten-4.4.1.jar"/>
+	<classpathentry kind="lib" path="lib/masked-text-field.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
