--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="lib" path="lib/postgresql-42.2.8.jar"/>
 	<classpathentry kind="lib" path="lib/charm-glisten-4.4.1.jar"/>
 	<classpathentry kind="lib" path="lib/masked-text-field.jar"/>
+	<classpathentry kind="lib" path="lib/jfxrt.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
