Cadastrar, deletar funcionario do BD
Mostrar funcionarios na tabela

Minor GUI changes

--- a/bin/model/db/db.properties
+++ b/bin/model/db/db.properties
@@ -1,4 +1,4 @@
 user = postgres
-password = aluno
-url = jdbc:postgresql://localhost:5432/test
+password = 152603
+url = jdbc:postgresql://localhost:5432/postgres?currentSchema=saudepp
 useSSL = false
