--- a/bin/model/db/db.properties
+++ b/bin/model/db/db.properties
@@ -1,4 +1,4 @@
-user = postgres
-password = 152603
-url = jdbc:postgresql://localhost:5432/postgres?currentSchema=saudepp
+user = integrado
+password = integrado1
+url = jdbc:postgresql://192.168.100.8/BancoDadosIntegrado?currentSchema=pedro
 useSSL = false
