--- a/src/model/db/db.properties
+++ b/src/model/db/db.properties
@@ -1,4 +1,4 @@
-user = integrado
-password = integrado1
-url = jdbc:postgresql://192.168.100.8/BancoDadosIntegrado?currentSchema=pedro
+user = postgres
+password = 152603
+url = jdbc:postgresql://localhost:5432/postgres?currentSchema=saudepp
 useSSL = false
