--- a/src/model/db/db.properties
+++ b/src/model/db/db.properties
@@ -1,4 +1,4 @@
 user = postgres
-password = 152603
-url = jdbc:postgresql://localhost:5432/postgres?currentSchema=saudepp
+password = updemvop
+url = jdbc:postgresql://localhost:5432/saudepp?currentSchema=public
 useSSL = false
