--- a/bin/model/db/db.properties
+++ b/bin/model/db/db.properties
@@ -1,4 +1,4 @@
 user = postgres
-password = 12345
-url = jdbc:postgresql://localhost:5432/saudepp?currentSchema=public
+password = 152603
+url = jdbc:postgresql://localhost:5432/postgres?currentSchema=saudepp
 useSSL = false
